--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "parcel-bundler": "^1.3.1"
-  }
+  },
+  "engines": {
+    "node": "5.0.0",
+    "npm": "4.6.1"
+    }
 }
